style(tastebuds): Fix more spacing and nesting issues with content wrappers and, subsections, and section containers

--- a/src/components/MediaCarousel/_MediaCarousel.scss
+++ b/src/components/MediaCarousel/_MediaCarousel.scss
@@ -74,7 +74,7 @@
 	align-items: center;
 }
 
-.carousel-content-wrapper {
+.carousel-content_wrapper {
 	display: flex;
 	flex-direction: column-reverse;
 	margin: auto;
