--- a/src/scss/tastebuds/_user-personas.scss
+++ b/src/scss/tastebuds/_user-personas.scss
@@ -76,6 +76,8 @@
 }
 
 .user-persona_tabs.tabs-container {
+  margin-bottom: 2rem;
+
   .tabs-menu {
     margin-left: auto;
     margin-right: auto;
